@@ -1,5 +1,10 @@
 2009-03-09  Richard Hult  <richard@imendio.com>
 
+	* Merge revision 2764 from upstream, further optimizations to the
+	markup backend.
+
+2009-03-09  Richard Hult  <richard@imendio.com>
+
 	* Merge revision 2763 from upstream, to optimize the markup
 	backend.
 
